# portfolio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mysite/: package-lock.json  package.json  requirements.txt
mysite/media/: octordle.txt
mysite/myapp/: models.py  package-lock.json  package.json  serializers.py  tests.py  urls.py  views.py  webpack.config.js
mysite/myapp/migrations/: 0001_initial.py  0002_alter_gamepost_game.py  0002_post.py  0003_alter_post_body.py  0004_post_date.py  0005_auto_20220411_0315.py  0006_alter_post_author.py
mysite/myapp/src/components/: About.js  Album.js  App.js  Calendar.js  Chores.js  Contact.js  Default.js  Hobbies.js  HomePage.js  Planner.js  Portfolio.js  Resume.js  Servers.js  Social.js  Stocks.js
mysite/myapp/src/components/subcomponents/: Default.js  Updates.js  album.css  contact.css  default.css  hobbies.css  planner.css  portfolio.css  resume.css  stocks.css
mysite/myapp/static/: drews_css.css
mysite/myapp/static/frontend/: main.js  main.js.LICENSE.txt
mysite/myapp/templates/: base.html  download.html  home.html  social.html  upload.html
mysite/myapp/templates/registration/: base.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
mysite/mysite/: settings.py  storages.py  urls.py  wsgi.py
mysite/staticfiles/: staticfiles.json
mysite/staticfiles/frontend/: main.js.LICENSE.txt
mysite/staticfiles/frontend/css/: drews_login_css.css
(+2 files in other folders)
