[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["arbowl <arbowl@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-storages = "^1.12.3"
boto3 = "^1.21.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
